# GameKit

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirement-dev.txt  requirements.txt  setup.py  todo.md
.github/: FUNDING.yml
.github/workflows/: codeql.yml  publish.yml  python-testrun.yml  release-to-pypi.yml
game_theory/: __init__.py  exceptions.py
game_theory/algorithms/: __init__.py  bankruptcy.py
gamekit/: __init__.py  exceptions.py
gamekit/algorithms/: __init__.py  bankruptcy.py  gale_shapley_algorithm.py  top_trading_cycle.py
gamekit/algorithms/tests/: test_bankruptcy.py
tests/algorithms/: test_bankruptcy.py
