[project]
name = "gameTheory"
dynamic = ["version", "readme", "dependencies"]
authors = [
  {name="Ali Faraji", email="ali@01d.ir" },
]
description = "A library for Game Theory"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {file = "VersionFile"}
readme = {file = ["README.md"]}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["gamekit"]
include = ["gamekit*"]
exclude = ["gamekit*.tests.*"]

[project.urls]
"Homepage" = "https://github.com/alifa98/GameKit"
"Bug Tracker" = "https://github.com/alifa98/GameKit/issues"
