[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gameTheory"
description="A library for game theory algorithms in Python"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    { name = "Ali Faraji", email = "ali@faraji.info" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/alifa98/GameKit/"
"Documentation" = "https://github.com/alifa98/GameKit/wiki"
"Source" = "https://github.com/alifa98/GameKit/"

[tool.setuptools.packages.find]
where = ["game_theory"]
exclude = ["tests*", "tests/*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"